# usando_mito

./: .gitignore  Alemanha.xlsx  Canada.xlsx  Chile.xlsx  EUA.xlsx  Franca.xlsx  README.md  paises.xlsx  pyproject.toml  teste_mito.ipynb
usando_mito/: README.md
